--- a/views/authors.hbs
+++ b/views/authors.hbs
@@ -1,29 +1,34 @@
 <div class='container'>
   <nav>
-    <div class='authorlink'>
-      <h2>Authors</h2>
-    </div>
-    <div class='booklink'>
-      <h2>Books</h2>
-  {{#authors}}
-  <a href="/books/{{id}}"><p>{{title}}</p></a><br>
-  {{/authors}}
-    </div>
-  </nav>
 
+    <a href="/authors"><h2>Authors</h2></a>
+    {{#authors}}
+    <a href="/authors/{{authors.id}}"><p>{{last_name}}</p></a>
+    {{/authors}}
+
+    <a href="/books"><h2>Books</h2></a>
+    {{#title}}
+    <a href="/books/{{id}}"><p>{{title}}</p></a>
+    {{/title}}
+
+
+  </nav>
   <article>
 
     {{#authors}}
 
     <div class='bookwrap'>
-      <img class='bookcover' src="{{cover}}" />
+      <a href="/authors/{{id}}">
+        <img class='portrait' src="{{portrait}}" />
+      </a>
 
-      <div class='infowrap'>
-        <h1>{{title}}</h1>
-        <h2>{{genre}}</h2>
-        <p>
-          {{description}}
-        </p>
+      <div class='authorinfowrap'>
+        <a href="/authors/{{id}}">
+
+          <h1>{{first_name}} {{last_name}}</h1>
+        </a>
+        <h3>{{titles}}</h3>
+        <p>{{biography}}</p>
       </div>
 
     </div>
