--- a/views/books.hbs
+++ b/views/books.hbs
@@ -1,14 +1,18 @@
 <div class='container'>
+
+
   <nav>
-    <div class='authorlink'>
-      <h2>Authors</h2>
-    </div>
-    <div class='booklink'>
-      <h2>Books</h2>
-  {{#books}}
-  <a href="/books/{{id}}"><p>{{title}}</p></a><br>
-  {{/books}}
-    </div>
+
+    <a href="/authors"><h2>Authors</h2></a>
+    {{#each names}}
+    <a href="/authors/{{id}}"><p>{{this}}</p></a>
+    {{/each}}
+
+    <a href="/books"><h2>Books</h2></a>
+    {{#data}}
+    <a href="/books/{{id}}"><p>{{title}}</p></a>
+    {{/data}}
+
   </nav>
 
   <article>
@@ -16,20 +20,26 @@
     {{#books}}
 
     <div class='bookwrap'>
-      <img class='bookcover' src="{{cover}}" />
 
+      <a href="/{{id}}"><img class='bookcover' src="{{cover}}" /></a>
       <div class='infowrap'>
-        <h1>{{title}}</h1>
-        <h2>{{genre}}</h2>
-        <p>
-          {{description}}
-        </p>
+        <a href="/books/{{id}}"><h1>{{title}}</h1></a>
+        {{#each names}}
+        <h3>{{this}}</h2>
+          {{/each}}
+          <h3>{{genre}}</h3>
+          <p>{{description}}</p>
+        </div>
+
       </div>
+      <form action="/books/delete/{{id}}" method="post">
+        <input type="button" name="delete" value="Delete Book">
+      </form>
 
-    </div>
 
-    {{/books}}
 
-  </article>
+      {{/books}}
 
-</div>
+    </article>
+
+  </div>
