--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,8 @@
       <a href="/"><h1>
         Galvanize Reads
       </h1></a>
+      <a href="/books/add"><h3>Add Book</h3></a>
+
     </header>
     {{{body}}}
   </body>
