--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,8 @@
       <a href="/"><h1>
         Galvanize Reads
       </h1></a>
-      <a href="/books/add"><h3>Add Book</h3></a>
+      <a style='display: inline' href="/books/add"><h3>Add Book</h3></a>
+      <a style='display: inline' href="/authors/add"><h3>Add Author</h3></a>
 
     </header>
     {{{body}}}
