--- a/views/addauthor.hbs
+++ b/views/addauthor.hbs
@@ -1,110 +1,82 @@
 <div class='container'>
-  <div class='container'>
 
-    <nav>
-      <a href="/authors"><h2>Authors</h2></a>
-      {{#authors}}
-      <a href="/authors/{{id}}"><p>{{last_name}}</p></a>
-      {{/authors}}
-      <a href="/books"><h2>Books</h2></a>
-      {{#data}}
-      <a href="/books/{{id}}"><p>{{title}}</p></a>
-      {{/data}}
-    </nav>
-
-
-
-    <article>
-
-      <form action="/books/add" method="post">
-        <table>
-          <tr>
-            <td>
-              <h3>Add Book</h3>
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              Title
-            </td>
-            <td>
-              <input type="text" name="title" value="">
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              Genre
-            </td>
-            <td>
-              <input type="text" name="genre" value="">
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              Description
-            </td>
-            <td>
-              <input type="text" name="description" value="">
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              Cover URL
-            </td>
-            <td>
-              <input type="text" name="cover" value="">
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <br>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Select Authors</h3>
-            </td>
-          </tr>
-          {{#authors}}
-
-          <tr>
-            <td>
-              {{first_name}} {{last_name}}
-            </td>
-            <td>
-              <input type="checkbox" name='authors' value="{{id}}">
-            </td>
-          </tr>
-
-          {{/authors}}
-          <tr>
-            <td>
-              <br>
-            </td>
-          </tr>
+  <nav>
+    <a href="/authors"><h2>Authors</h2></a>
+    {{#authors}}
+    <a href="/authors/{{id}}"><p>{{last_name}}</p></a>
+    {{/authors}}
+    <a href="/books"><h2>Books</h2></a>
+    {{#books}}
+    <a href="/books/{{id}}"><p>{{title}}</p></a>
+    {{/books}}
+  </nav>
 
 
 
+  <article>
+
+    <form action="/authors/add" method="post">
+      <table>
+        <tr>
+          <td>
+            <h3>Add Author</h3>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            First Name
+          </td>
+          <td>
+            <input type="text" name="first_name" value="">
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            Last Name
+          </td>
+          <td>
+            <input type="text" name="last_name" value="">
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            Biography
+          </td>
+          <td>
+            <input type="text" name="biography" value="">
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            Portrait URL
+          </td>
+          <td>
+            <input type="text" name="portrait" value="">
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <br>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <input type="submit" value="submit">
+          </td>
+        </tr>
+
+      </table>
+    </form>
 
 
-          <tr>
-            <td>
-              <input type="submit" value="submit">
-            </td>
-          </tr>
 
-        </table>
-      </form>
+  </article>
 
 
 
-    </article>
-
-
-
-  </div>
 </div>
