--- a/views/books.hbs
+++ b/views/books.hbs
@@ -4,9 +4,9 @@
   <nav>
 
     <a href="/authors"><h2>Authors</h2></a>
-    {{#each names}}
-    <a href="/authors/{{id}}"><p>{{this}}</p></a>
-    {{/each}}
+    {{#authors}}
+    <a href="/authors/{{id}}"><p>{{last_name}}</p></a>
+    {{/authors}}
 
     <a href="/books"><h2>Books</h2></a>
     {{#books}}
@@ -30,11 +30,11 @@
           <h3>{{genre}}</h3>
           <p>{{description}}</p>
         </div>
-
+        <form action="/books/delete/{{id}}" method="post">
+          <input type="button" name="delete" value="Delete Book">
+        </form>
       </div>
-      <form action="/books/delete/{{id}}" method="post">
-        <input type="button" name="delete" value="Delete Book">
-      </form>
+
 
 
 
