--- a/views/books.hbs
+++ b/views/books.hbs
@@ -1,6 +1,4 @@
 <div class='container'>
-
-
   <nav>
 
     <a href="/authors"><h2>Authors</h2></a>
@@ -29,10 +27,11 @@
           {{/each}}
           <h3>{{genre}}</h3>
           <p>{{description}}</p>
+          <form action="/books/delete/{{id}}" method="post">
+            <input type="submit" value="Delete Book">
+          </form>
         </div>
-        <form action="/books/delete/{{id}}" method="post">
-          <input type="button" name="delete" value="Delete Book">
-        </form>
+
       </div>
 
 
