--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -26,6 +26,12 @@ header {
   margin-bottom: 20px;
 }
 
+.longinput {
+  width: 300px;
+  max-width: 100%;
+
+}
+
 nav {
   text-align: right;
   overflow: hidden;
