--- a/views/addbook.hbs
+++ b/views/addbook.hbs
@@ -43,21 +43,24 @@
 
         <tr>
           <td>
-            Description
-          </td>
-          <td>
-            <input type="text" name="description" value="">
-          </td>
-        </tr>
-
-        <tr>
-          <td>
             Cover URL
           </td>
           <td>
             <input type="text" name="cover" value="">
           </td>
         </tr>
+
+
+        <tr>
+          <td>
+            Description
+          </td>
+          <td>
+            <input class='longinput' type="text" name="description" value="">
+          </td>
+        </tr>
+
+
         <tr>
           <td>
             <br>
