--- a/views/authors.hbs
+++ b/views/authors.hbs
@@ -35,6 +35,9 @@
           <form action="/authors/delete/{{id}}" method="post">
             <input type="submit" value="Delete Author">
           </form>
+          <form action="/authors/edit/{{id}}" method="get">
+            <input type="submit" value="Update Author">
+          </form>
         </div>
 
 
