--- a/views/books.hbs
+++ b/views/books.hbs
@@ -30,6 +30,9 @@
           <form action="/books/delete/{{id}}" method="post">
             <input type="submit" value="Delete Book">
           </form>
+          <form action="/books/edit/{{id}}" method="post">
+            <input type="submit" value="Update Book">
+          </form>
         </div>
 
       </div>
