--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,10 @@ p {
 header {
   margin-bottom: 20px; }
 
+.longinput {
+  width: 300px;
+  max-width: 100%; }
+
 nav {
   text-align: right;
   overflow: hidden;
