--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,13 @@
 <div class='container'>
 
   <div class="halfpage">
-    <a href="/authors"><p>Authors</p></a>
+    <a class='landlink' href="/authors"><h1>Authors</h1></a>
+    <a href="/books"><img class='landing' src="http://www.wallums.com/images/detailed/5/Bamboo-Forest-Mural.jpg" alt="" /></a>
   </div>
 
   <div class="halfpage">
-    <a href="/books"><p>Books</p></a>
+    <a class='landlink' href="/books"><h1>Books</h1></a>
+    <a href="/books"><img class='landing' src="http://ep.yimg.com/ay/craftersmarket/beach-ocean-and-pool-scrapbook-paper-41-choices-3.gif" alt="" /></a>
   </div>
 
 </div>
