--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,8 +1,16 @@
+a {
+  text-decoration: none;
+}
+
 h1 {
   margin: 0;
   padding: 10px;
   color: white;
   background-color: black;
+}
+
+.container {
+  clear: both;
 }
 
 h2  {
@@ -19,7 +27,15 @@ h4 {
   margin: 0;
   padding: 10px;
 }
+.logo {
+  margin: 0 15px 0 0;
+  float: left;
+}
 
+.addlink {
+  float: right;
+
+}
 
 p {
   margin: 0;
@@ -27,8 +43,25 @@ p {
 
 }
 
+.infowrap > p {
+  text-align: justify;
+
+}
+
+.authorinfowrap > p {
+  text-align: justify;
+
+}
+
+.landing {
+  width: 100%;
+}
+
+
+
 header {
-  margin-bottom: 20px;
+  background-color: black;
+  overflow: auto;
 }
 
 .longinput {
@@ -70,15 +103,6 @@ a {
   float: left;
 }
 
-
-.halfpage:nth-of-type(1) {
-  background-color: grey;
-}
-
-.halfpage:nth-of-type(2) {
-  background-color: green;
-}
-
 .bookcover {
   width: 18%;
   display: inline-block;
@@ -97,6 +121,11 @@ a {
   display: block;
 }
 
+
+.infowrap > form {
+  padding-left: 10px;
+}
+
 .authorinfowrap {
   width: 85%;
   float: right;
@@ -105,6 +134,14 @@ a {
 
 .bookwrap {
   overflow: auto;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   clear: both;
+}
+
+.landlink {
+  top: 110px;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white
+
 }
