--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <header>
-      <a href="/"><h1>
-        Galvanize Reads
-      </h1></a>
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+<body>
+  <header>
+    <a href="/"><img class='logo' style="width: 5%" src="https://d1qb2nb5cznatu.cloudfront.net/startups/i/549197-45cfc0ff1f64116aceead7d4bdc1d6fc-medium_jpg.jpg?buster=1420650151" alt="" /></a>
+    <a href="/"><h1>
+      Galvanize Reads
+    </h1></a>
 
-      <a style='display: inline' href="/books/add"><h3>Add Book</h3></a>
-      <a style='display: inline' href="/authors/add"><h3>Add Author</h3></a>
+    <div class='addlink'><a href="/books/add"><h3>Add Book</h3></a></div>
 
-    </header>
-    {{{body}}}
-  </body>
+    <div class='addlink'><a href="/authors/add"><h3>Add Author</h3></a></div>
+
+  </header>
+  {{{body}}}
+</body>
 </html>
