Fixed links in individual book/author pages, final styling

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -126,6 +126,10 @@ a {
   padding-left: 10px;
 }
 
+.authorinfowrap > form {
+  padding-left: 10px;
+}
+
 .authorinfowrap {
   width: 85%;
   float: right;
