--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -96,6 +96,9 @@ a {
 .infowrap > form {
   padding-left: 10px; }
 
+.authorinfowrap > form {
+  padding-left: 10px; }
+
 .authorinfowrap {
   width: 85%;
   float: right;
