--- a/views/addbook.hbs
+++ b/views/addbook.hbs
@@ -6,9 +6,9 @@
     <a href="/authors/{{id}}"><p>{{last_name}}</p></a>
     {{/authors}}
     <a href="/books"><h2>Books</h2></a>
-    {{#data}}
+    {{#books}}
     <a href="/books/{{id}}"><p>{{title}}</p></a>
-    {{/data}}
+    {{/books}}
   </nav>
 
 
